# mineos

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  demo_fancy_cli.sh
mineos-cli/: Cargo.toml
mineos-cli/src/: lib.rs  main.rs  miner_service.rs
mineos-cli/src/client/: mod.rs
mineos-cli/src/commands/: benchmark.rs  config_cmd.rs  mod.rs  overclock.rs  profit.rs  setup.rs  start.rs  status.rs  stop.rs  switch.rs  update.rs
mineos-cli/src/config/: mod.rs
mineos-cli/src/dashboard/: layout.rs  mod.rs  ui.rs  widgets.rs
mineos-cli/src/utils/: banner.rs  gpu_selector.rs  mod.rs
mineos-core/: Cargo.toml
mineos-core/src/: gpu_scheduler.rs  job_queue.rs  lib.rs  miner.rs  monitoring.rs  nonce_manager.rs  share_validator.rs  work_distributor.rs
mineos-core/src/benchmark/: comparison.rs  efficiency.rs  export.rs  hashrate.rs  mod.rs  shares.rs  suite.rs  tests.rs  thermal.rs
mineos-core/tests/: integration.rs
mineos-hardware/: Cargo.toml
mineos-hardware/kernels/: test_kernel.cu
mineos-hardware/src/: detection.rs  lib.rs  manager.rs
mineos-hardware/src/cuda/: device.rs  error.rs  kernel.rs  memory.rs  mod.rs
mineos-hardware/src/monitor/: metrics.rs  mod.rs  nvml.rs
mineos-hardware/tests/: integration.rs
mineos-hash/: Cargo.toml
mineos-hash/src/: lib.rs
mineos-hash/src/algorithms/: mod.rs
mineos-hash/src/algorithms/kawpow/: dag.rs  fnv.rs  keccak.rs  kiss99.rs  mod.rs  progpow.rs
mineos-hash/src/common/: hash_types.rs  mod.rs
mineos-hash/src/cuda/: kawpow_kernel.cu  kawpow_optimized.cu  mod.rs  mod_optimized.rs  optimized.rs
mineos-hash/src/stratum/: mod.rs
mineos-stratum/: Cargo.toml
mineos-stratum/examples/: basic_mining.rs
mineos-stratum/src/: client.rs  config.rs  connection.rs  error.rs  lib.rs  pool.rs  protocol.rs
mineos-stratum/tests/: connection_test.rs
