[package]
name = "mineos-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "mineos"
path = "src/main.rs"

[dependencies]
# CLI and TUI
clap = { version = "4.4", features = ["derive", "cargo", "env"] }
ratatui = "0.25"
crossterm = "0.27"
dialoguer = "0.11"
indicatif = "0.17"
colored = "2.1"
tabled = "0.15"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
humansize = "2.1"
once_cell = "1.19"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System
notify = "6.1"
reqwest = { version = "0.11", features = ["json"] }
dirs = "5.0"
gethostname = "0.4"
nvml-wrapper = "0.9"
console = "0.15"

# Internal dependencies
mineos-core = { path = "../mineos-core" }
mineos-hardware = { path = "../mineos-hardware" }
mineos-hash = { path = "../mineos-hash" }
mineos-stratum = { path = "../mineos-stratum" }

[dev-dependencies]
tempfile = "3.8"
mockall = "0.12"