[package]
name = "mineos-hardware"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Hardware detection and GPU management for MineOS mining engine"

[dependencies]
# CUDA support - Using latest version (0.17)
# Auto-detect CUDA version from system
cudarc = { version = "0.17", features = ["driver", "nvrtc", "cuda-version-from-build-system"] }

# NVIDIA Management Library for monitoring
nvml-wrapper = "0.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
once_cell = "1.20"
lazy_static = "1.5"

# Async support (for monitoring)
tokio = { version = "1.40", features = ["sync", "rt", "macros", "time"] }

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"
tracing-subscriber = "0.3"

[features]
default = ["cuda"]
cuda = []
opencl = []  # Future: AMD GPU support
